--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,213 @@
 .container {
-  padding: 0 2rem;
+	padding: 0 2rem;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+	min-height: 100vh;
+	padding: 4rem 0;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .title a {
-  color: #0070f3;
-  text-decoration: none;
+	color: #0070f3;
+	text-decoration: none;
 }
 
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+	text-decoration: underline;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+	margin: 0;
+	line-height: 1.15;
+	font-size: 4rem;
 }
 
 .title,
 .description {
-  text-align: center;
+	text-align: center;
 }
 
 .description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+	margin: 4rem 0;
+	line-height: 1.5;
+	font-size: 1.5rem;
 }
 
 .code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+	background: #fafafa;
+	border-radius: 5px;
+	padding: 0.75rem;
+	font-size: 1.1rem;
+	font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+		Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+	display: grid;
+	grid-template-columns: repeat(4, minmax(0, 1fr));
+	gap: 2rem;
+	padding: 0 1rem;
+}
+.grid .gridItem {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	margin-bottom: 2rem;
+}
+.grid .gridItem img {
+	object-fit: contain;
+	width: 100%;
+	aspect-ratio: 1/1;
+}
+.grid .gridItem button {
+	background: blue;
+	color: white;
+	border: 2px solid white;
+	padding: 0.7rem;
+	border-radius: 20px;
+}
+
+.grid .gridItem button:hover {
+	background: darkblue;
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+	margin: 1rem;
+	padding: 1.5rem;
+	text-align: left;
+	color: inherit;
+	text-decoration: none;
+	border: 1px solid #eaeaea;
+	border-radius: 10px;
+	transition: color 0.15s ease, border-color 0.15s ease;
+	max-width: 300px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+	color: #0070f3;
+	border-color: #0070f3;
 }
 
 .card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+	margin: 0 0 1rem 0;
+	font-size: 1.5rem;
 }
 
 .card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+	margin: 0;
+	font-size: 1.25rem;
+	line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.nav {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	align-items: center;
+	position: static;
+	background: blue;
+	color: white;
+}
+.nav a {
+	height: 100%;
+	padding: 1rem 2rem;
+}
+.nav .logo {
+	margin: 0;
+	position: absolute;
+	left: 0;
+	margin-left: 1rem;
+}
+.nav a:hover {
+	background: white;
+	color: blue;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.footer {
+	width: 100%;
+	height: fit-content;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	position: absolute;
+	bottom: 0;
+	transform: translateY(100%);
+	padding: 15px 50px;
+	text-align: center;
+	flex-wrap: wrap;
+	background: blue;
+	color: white;
+}
+.footer > p {
+	width: 100%;
+	padding: 10px 0;
+}
+.footer div {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+.footer div * {
+	padding: 10px 10px;
+}
+
+.login {
+	gap: 1.5rem;
+}
+.login h1 {
+	font-size: 3.5rem;
+}
+.login input {
+	font-size: 1.5rem;
+}
+.login button {
+	font-size: 1.5rem;
+}
+
+.button {
+	background: blue;
+	color: white;
+	border: 2px solid white;
+	padding: 0.7rem;
+	border-radius: 20px;
+	margin: 0.5rem;
+}
+
+.button:hover {
+	background: darkblue;
+}
+
+.addRem {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	gap: 0.5rem;
+}
+
+@media (max-width: 660px) {
+	.grid {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+}
+@media (max-width: 440px) {
+	.grid {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+}
+@media (max-width: 350px) {
+	.grid {
+		grid-template-columns: minmax(0, 1fr);
+	}
 }
