--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,67 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	text-align: center;
+}
+#__next {
+	position: relative;
+	min-height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin: 0.5rem 0;
+}
+
+a,
+button {
+	cursor: pointer;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
+}
+
+button {
+	width: fit-content;
+}
+
+input {
+	width: fit-content;
+	font-size: 1rem;
+}
+
+form {
+	width: 80%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 1rem;
+	margin: 1rem auto;
+}
+
+button[type="submit"] {
+	background: white;
+	color: black;
+	border: 2px solid black;
+	font-size: 1.3rem;
+	padding: 0.5rem 1rem;
+	border-radius: 25px;
+}
+button[type="submit"]:hover,
+button[type="submit"]:focus {
+	background: gray;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
