--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -196,6 +196,20 @@
 	gap: 0.5rem;
 }
 
+.item {
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 50%;
+}
+
+.item img {
+	max-width: 350px;
+	aspect-ratio: 1/1;
+	object-fit: contain;
+}
+
 @media (max-width: 660px) {
 	.grid {
 		grid-template-columns: repeat(3, minmax(0, 1fr));
